Fix FFmpeg 7.0+ to render HDR animations

We shoudl use non-constant luminance coefficients so
newer ffmpeg will render hdr animations.

Also fix the order of the mastering display info.

Related FFmpeg issue:
https://code.ffmpeg.org/FFmpeg/FFmpeg/issues/20546

BUG:520669